tests/rosetta/out/Ruby/15-puzzle-solver.rb
# Generated by Mochi compiler v0.10.26 on 2025-07-16T12:21:45Z
testpkg = Struct.new(:Add, :Pi, :Answer).new(->(a,b){ a + b }, 3.14, 42)

puts(testpkg.FifteenPuzzleExample.call())
